Fix broken layout after removing reset

--- a/src/Site/BaseBundle/Resources/assets/css/base.scss
+++ b/src/Site/BaseBundle/Resources/assets/css/base.scss
@@ -169,6 +169,7 @@ body {
   }
   .row {
     overflow: hidden;
+    margin: 0;
     .column-left {
       float: left;
       width: 745px;
