--- a/src/Site/BaseBundle/Resources/assets/css/homepage.scss
+++ b/src/Site/BaseBundle/Resources/assets/css/homepage.scss
@@ -8,6 +8,7 @@
 #selected-for-homepage {
   position: absolute;
   bottom: 173px;
+  margin-left: 0;
   li {
     position: relative;
     &:before {
